[release-line-3.4] Update 2026-03-24.21
Reference commit: 677c7a0748
