# community/ledger-api-bench-tool/src/main/scala/com/digitalasset/canton/ledger/api/benchtool/PruningBenchmark.scala
@@ -54,6 +54,7 @@ class PruningBenchmark(reportingPeriod: FiniteDuration) {
         synchronizerId = "",
         packageIdSelectionPreference = Nil,
         prefetchContractKeys = Nil,
+        tapsMaxPasses = None,
       )
     )
     durationMetric = MetricsSet.createTotalRuntimeMetric[Unit](pruningConfig.maxDurationObjective)
