# community/ledger-test-tool/suites/lf-v2.2/src/main/scala/com/daml/ledger/api/testtool/infrastructure/participant/SingleParticipantTestContext.scala
@@ -1237,6 +1237,7 @@ final class SingleParticipantTestContext private[participant] (
       prefetchContractKeys = Seq.empty,
       maxRecordTime = Option.empty,
       estimateTrafficCost = estimateTrafficCost,
+      tapsMaxPasses = None,
     )
 
   override def executeSubmissionRequest(
